# fcitx5-chinese-addons

./: .formatignore  CMakeLists.txt  Messages.sh  README.md  config.h.in  org.fcitx.Fcitx5.Addon.ChineseAddons.metainfo.xml.in  org.fcitx.fcitx5-chinese-addons.metainfo.xml.in
.github/workflows/: check.yml
cmake/: FindOpenCC.cmake
gui/: CMakeLists.txt
gui/customphraseeditor/: CMakeLists.txt  customphraseeditor.cpp  customphraseeditor.h  customphraseeditor.json  customphraseeditor.ui  customphrasemodel.cpp  customphrasemodel.h  editordialog.cpp  editordialog.h  editordialog.ui  main.cpp  main.h  model.cpp  model.h
gui/pinyindictmanager/: CMakeLists.txt  browserdialog.cpp  browserdialog.h  browserdialog.ui  browserdialog_webkit.ui  filedownloader.cpp  filedownloader.h  filelistmodel.cpp  filelistmodel.h  guicommon.h  log.cpp  log.h  main.cpp  main.h  pinyindictmanager.cpp  pinyindictmanager.h  pinyindictmanager.json  pinyindictmanager.ui  pipeline.cpp  pipeline.h  pipelinejob.cpp  pipelinejob.h  processrunner.cpp  processrunner.h  renamefile.cpp  renamefile.h
icon/: CMakeLists.txt
im/: CMakeLists.txt
im/pinyin/: CMakeLists.txt  chaizi.txt  customphrase.cpp  customphrase.h  emoji.txt  pinyin-addon.conf  pinyin-addon.conf.in  pinyin-addon.conf.in.in  pinyin.conf  pinyin.conf.in  pinyin.cpp  pinyin.h  pinyin.lua  pinyincandidate.cpp  pinyincandidate.h  pinyinenginefactory.cpp  pinyinenginefactory.h  shuangpin.conf  shuangpin.conf.in  sp.dat.example  symboldictionary.cpp  symboldictionary.h  symbols  workerthread.cpp  workerthread.h
im/table/: CMakeLists.txt  candidate.cpp  candidate.h  cangjie.conf.in.in  context.cpp  context.h  db.conf.in.in  engine.cpp  engine.h  erbi.conf.in.in  factory.cpp  factory.h  ime.cpp  ime.h  qxm.conf.in.in  state.cpp  state.h  table.conf  table.conf.in  table.conf.in.in  table.cpp  table.h  wanfeng.conf.in.in  wbpy.conf.in.in  wbx.conf.in  wbx.conf.in.in  wubi.conf.in.in  zrm.conf.in.in
im/table/inputmethod/: wbpy.conf  wbx.conf
modules/: CMakeLists.txt  common.h
modules/amountinword/: CMakeLists.txt  amountinword.conf.in.in  amountinword.cpp  amountinword.h
modules/chttrans/: CMakeLists.txt  chttrans-native.cpp  chttrans-native.h  chttrans-opencc.cpp  chttrans-opencc.h  chttrans.conf  chttrans.conf.in  chttrans.conf.in.in  chttrans.cpp  chttrans.h  opencc-profile-name.cpp  update-opencc-profile-name.sh
modules/cloudpinyin/: CMakeLists.txt  cloudpinyin.conf  cloudpinyin.conf.in  cloudpinyin.conf.in.in  cloudpinyin.cpp  cloudpinyin.h  cloudpinyin_public.h  fetch.cpp  fetch.h  lrucache.h
modules/fullwidth/: CMakeLists.txt  fullwidth.conf  fullwidth.conf.in  fullwidth.conf.in.in  fullwidth.cpp  fullwidth.h  fullwidth_public.h
modules/pinyinhelper/: CMakeLists.txt  pinyinhelper.conf.in  pinyinhelper.conf.in.in  pinyinhelper.cpp  pinyinhelper.h  pinyinhelper_public.h  pinyinlookup.cpp  pinyinlookup.h  stroke.cpp  stroke.h
modules/pinyinhelper/data/: CMakeLists.txt
modules/punctuation/: CMakeLists.txt  punc.mb.zh_CN  punc.mb.zh_HK  punctuation.conf  punctuation.conf.in  punctuation.conf.in.in  punctuation.cpp  punctuation.h  punctuation_public.h
po/: CMakeLists.txt  LINGUAS  ca.po  da.po  de.po  fcitx.pot  fcitx5-chinese-addons.pot  fr.po  he.po  ja.po  ka.po  ko.po  ru.po  vi.po  zh_CN.po  zh_TW.po
test/: CMakeLists.txt  testchttrans.cpp  testcloudpinyin.cpp  testcustomphrase.cpp  testdir.h.in  testfullwidth.cpp  testpinyin.cpp  testpinyinhelper.cpp  testpunctuation.cpp  testpuncutation.cpp  testsymboldictionary.cpp  testtable.cpp  valgrind_suppress
test/addon/: CMakeLists.txt
test/inputmethod/: CMakeLists.txt  sim.conf  trad.conf
tools/: CMakeLists.txt  scel2org5.cpp
